[package]
name = "streams-examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
identity = { git = "https://github.com/iotaledger/identity.rs", branch = "dev", features = ["account"] }
iota-streams = { git = "https://github.com/iotaledger/streams", branch = "develop", version = "0.1.2"}
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", features = ["random","ed25519"], branch = "dev", version = "0.9.1"}
anyhow = "1.0.40"
tokio = {version = "1.5"}
rand = "0.7.3"
serde = "1.0.59"
serde_json = "1.0.59"
serde_bytes = "0.11.5"

#ed25519-dalek = "1.0.1"
